--- a/clAIrity/app/build.gradle
+++ b/clAIrity/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.chaquo.python'
 }
 
 android {
@@ -13,7 +14,17 @@ android {
         versionCode 1
         versionName "1.0"
 
+        python{
+            pip{
+                install "requests"
+            }
+        }
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+        }
+
     }
 
     buildTypes {
