--- a/clAIrity/app/src/main/AndroidManifest.xml
+++ b/clAIrity/app/src/main/AndroidManifest.xml
@@ -47,5 +47,7 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
